[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/hud/texture_progress/energy_bar/background.png" type="Texture" id=1]
[ext_resource path="res://assets/hud/texture_progress/energy_bar/bar.png" type="Texture" id=2]
[ext_resource path="res://scripts/environment/interface/energy_bar_container.gd" type="Script" id=3]

[node name="EnergyBarContainer" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarBackground" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = 26.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuxEnergyBar" type="TextureProgress" parent="BarBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -6.0
margin_right = 30.0
margin_bottom = 6.0
texture_progress = ExtResource( 2 )

[node name="EnergyBar" type="TextureProgress" parent="BarBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -6.0
margin_right = 30.0
margin_bottom = 6.0
texture_progress = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
